k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intelligent-rh
  labels:
    project: intelligent-rh
    env: development
