k8s/config-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: intelligent-rh
spec:
  ports:
    - port: 8888
  selector:
    app: config-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: houssem80356/intelligent-app2-config-server:latest
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
