k8s/discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: intelligent-rh
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: discovery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: houssem80356/intelligent-app2-discovery:latest
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 5
