k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: intelligent-rh
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: houssem80356/intelligent-app2-frontend:latest
          ports:
            - containerPort: 80
