k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: intelligent-rh
spec:
  type: NodePort
  ports:
    - port: 8222
      targetPort: 8222
      nodePort: 30222  # Accès via http://localhost:30222
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: houssem80356/intelligent-app2-gateway:latest
          ports:
            - containerPort: 8222
