k8s/maildev.yaml
apiVersion: v1
kind: Service
metadata:
  name: maildev
  namespace: intelligent-rh
spec:
  ports:
    - name: smtp
      port: 1025
    - name: web
      port: 1080
      nodePort: 31080
  type: NodePort
  selector:
    app: maildev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev
          ports:
            - containerPort: 1025
            - containerPort: 1080
