k8s/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: intelligent-rh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      # CRUCIAL : Donne les droits d'écriture sur le volume à l'utilisateur SonarQube
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:9.9-community
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: 4Gi
              cpu: "2"
            requests:
              memory: 2Gi
              cpu: "1"
          volumeMounts:
            - name: sonarqube-storage
              mountPath: /opt/sonarqube/data
      volumes:
        - name: sonarqube-storage
          persistentVolumeClaim:
            claimName: sonarqube-data
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: intelligent-rh
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30009
  selector:
    app: sonarqube
