k8s/sonarqube.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: intelligent-rh
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30009
  selector:
    app: sonarqube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: intelligent-rh
spec:
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:lts-community
          ports:
            - containerPort: 9000
