k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intelligent-rh-ingress
  namespace: intelligent-rh
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://intelligent-rh:8088, http://intelligent-rh:32000, http://intelligent-rh:30222, http://intelligent-rh , http://intelligent-rh:30090 , http://intelligent-rh:30030"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    # LE SNIPPET A ÉTÉ SUPPRIMÉ ICI POUR ÉVITER L'ERREUR 400

spec:
  ingressClassName: nginx
  rules:
    - host: intelligent-rh
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

          - path: /sonarqube
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000

          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /kanban
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /calendars
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /files
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8222

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
